--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm.iOS/Info.plist
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm.iOS/Info.plist
@@ -34,5 +34,9 @@
 	<string>Intouch.Edm</string>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcon.appiconset</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
