--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm.iOS/Intouch.Edm.iOS.csproj
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm.iOS/Intouch.Edm.iOS.csproj
@@ -167,14 +167,8 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Firebase.iOS.CloudMessaging">
-      <Version>4.3.0</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.Firebase.iOS.Core">
-      <Version>6.6.6</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.Firebase.iOS.InstanceID">
-      <Version>4.3.3</Version>
+    <PackageReference Include="Plugin.FirebasePushNotification">
+      <Version>3.1.6</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
   </ItemGroup>
