--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm.iOS/Intouch.Edm.iOS.csproj
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm.iOS/Intouch.Edm.iOS.csproj
@@ -167,6 +167,9 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Plugin.Badge">
+      <Version>2.0.0</Version>
+    </PackageReference>
     <PackageReference Include="Plugin.FirebasePushNotification">
       <Version>3.1.6</Version>
     </PackageReference>
