--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm.Android/Intouch.Edm.Android.csproj
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm.Android/Intouch.Edm.Android.csproj
@@ -69,7 +69,7 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AuthenticateOutput.cs" />
+    <Compile Include="Assets\AuthenticateOutput.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="MyFireBaseIDServices.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
@@ -202,6 +202,12 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\xml\file_paths.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\others.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\pandemic.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
