--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm.iOS/Intouch.Edm.iOS.csproj
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm.iOS/Intouch.Edm.iOS.csproj
@@ -266,4 +266,10 @@
   <ItemGroup>
     <BundleResource Include="Resources\emergencyIcon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\others.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\pandemic.png" />
+  </ItemGroup>
 </Project>
