--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm.iOS/Intouch.Edm.iOS.csproj
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm.iOS/Intouch.Edm.iOS.csproj
@@ -92,6 +92,7 @@
     <BuildIpa>true</BuildIpa>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Services\LocationService.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <Compile Include="SendRegistrationToServer.cs" />
