--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm.iOS/Info.plist
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm.iOS/Info.plist
@@ -35,6 +35,8 @@
     <string>This app needs access to photos.</string>
     <key>NSPhotoLibraryAddUsageDescription</key>
     <string>This app needs access to the photo gallery.</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Fill in a reason why your app needs access to location.</string>
     <key>NSAppTransportSecurity</key>
     <dict>
       <key>NSAllowsArbitraryLoads</key>
@@ -63,7 +65,5 @@
     <string>Intouch.Edm</string>
     <key>UIUserInterfaceStyle</key>
     <string>Light</string>
-    <key>NSLocationWhenInUseUsageDescription</key>
-    <string>Acil durum yer bildirimi</string>
   </dict>
 </plist>
