--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm.iOS/Info.plist
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm.iOS/Info.plist
@@ -35,8 +35,6 @@
     <string>This app needs access to photos.</string>
     <key>NSPhotoLibraryAddUsageDescription</key>
     <string>This app needs access to the photo gallery.</string>
-    <key>NSLocationWhenInUseUsageDescription</key>
-    <string>Fill in a reason why your app needs access to location.</string>
     <key>NSAppTransportSecurity</key>
     <dict>
       <key>NSAllowsArbitraryLoads</key>
@@ -65,5 +63,9 @@
     <string>Intouch.Edm</string>
     <key>UIUserInterfaceStyle</key>
     <string>Light</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>Your message goes here</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Your message goes here</string>
   </dict>
 </plist>
