--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm.iOS/Info.plist
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm.iOS/Info.plist
@@ -63,14 +63,9 @@
     <string>Intouch.Edm</string>
     <key>UIUserInterfaceStyle</key>
     <string>Light</string>
-    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-    <string>Your iOS 11 and higher background location usage description goes here.</string>
-    <!-- old properties for iOS 8 to 10 -->
     <key>NSLocationAlwaysUsageDescription</key>
-    <string>Your iOS 10 and lower background location usage description goes here.</string>
+    <string>Your message goes here</string>
     <key>NSLocationWhenInUseUsageDescription</key>
-    <string>Your foreground location usage description goes here.</string>
-    <key>NSLocationAlwaysUsageDescription</key>
     <string>Your message goes here</string>
   </dict>
 </plist>
