--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm.iOS/Intouch.Edm.iOS.csproj
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm.iOS/Intouch.Edm.iOS.csproj
@@ -92,6 +92,7 @@
     <BuildIpa>true</BuildIpa>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Renderers\MyTabbedPageRenderer.cs" />
     <Compile Include="Services\LocationService.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
@@ -274,9 +275,6 @@
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\password.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\rejectIcon.png" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\scenarioIcon.png" />
