Kullanıcı bilgi güncelleme ekranı tasarımı geliştirildi. Login altından eriişilebilmesi sağlandı.

--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm/Intouch.Edm.csproj
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm/Intouch.Edm.csproj
@@ -53,5 +53,8 @@
     <EmbeddedResource Update="Views\TaskListPage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\UpdateUserInfoPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
