--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm.iOS/Intouch.Edm.iOS.csproj
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm.iOS/Intouch.Edm.iOS.csproj
@@ -271,9 +271,6 @@
     <BundleResource Include="Resources\mailIcon.png" />
   </ItemGroup>
   <ItemGroup>
-    <BundleResource Include="Resources\notification.png" />
-  </ItemGroup>
-  <ItemGroup>
     <BundleResource Include="Resources\password.png" />
   </ItemGroup>
   <ItemGroup>
@@ -332,5 +329,8 @@
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\pandemic.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\appDetailLogo.png" />
   </ItemGroup>
 </Project>
