Senaryo Onay ekranının tasarımı tamamlandı.

--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm.iOS/Intouch.Edm.iOS.csproj
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm.iOS/Intouch.Edm.iOS.csproj
@@ -350,4 +350,7 @@
   <ItemGroup>
     <BundleResource Include="Resources\waterDetail.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\adkDetail.png" />
+  </ItemGroup>
 </Project>
