--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm.Android/Intouch.Edm.Android.csproj
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm.Android/Intouch.Edm.Android.csproj
@@ -250,5 +250,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\waterDetail.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\adkDetail.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
