--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm/Intouch.Edm.csproj
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm/Intouch.Edm.csproj
@@ -19,7 +19,8 @@
     <PackageReference Include="Xam.Plugin.Media" Version="4.0.1.5" />
     <PackageReference Include="Xam.Plugins.Forms.ImageCircle" Version="3.0.0.5" />
     <PackageReference Include="Xam.Plugins.Settings" Version="3.1.1" />
-    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />  
+    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
+    <PackageReference Include="Xamarin.Forms.InputKit" Version="3.3.1" />  
   </ItemGroup>
 
   <ItemGroup>
