--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm/Intouch.Edm.csproj
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm/Intouch.Edm.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Plugin.FirebasePushNotification" Version="2.3.1-rc" />
 	 <PackageReference Include="Plugin.Badge" Version="2.0.0" />
     <PackageReference Include="Refractored.MvvmHelpers" Version="1.3.0" />
+    <PackageReference Include="Rg.Plugins.Popup" Version="1.2.0.223" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
     <PackageReference Include="Xam.Plugin.Connectivity" Version="3.2.0" />
     <PackageReference Include="Xam.Plugin.Media" Version="4.0.1.5" />
@@ -38,6 +39,9 @@
     </EmbeddedResource>
     <EmbeddedResource Update="Views\NewScenarioPage.xaml">
       <Generator>MSBuild:Compile</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\PopupSheet.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\ScenarioApprovePage.xaml">
       <Generator>MSBuild:Compile</Generator>
