--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm.Android/Intouch.Edm.Android.csproj
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm.Android/Intouch.Edm.Android.csproj
@@ -64,6 +64,9 @@
     <PackageReference Include="Rg.Plugins.Popup">
       <Version>1.2.0.223</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.Essentials">
+      <Version>1.0.1</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Firebase.Iid">
       <Version>60.1142.1</Version>
     </PackageReference>
