--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm/Intouch.Edm.csproj
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm/Intouch.Edm.csproj
@@ -32,6 +32,9 @@
     <EmbeddedResource Update="Views\AnnouncementPage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\CallConfirmSheet.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\ForgetPasswordPage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
