Detay ekranlarının tasarımı bitirildi.

--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm.iOS/Intouch.Edm.iOS.csproj
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm.iOS/Intouch.Edm.iOS.csproj
@@ -381,4 +381,7 @@
   <ItemGroup>
     <BundleResource Include="Resources\announcement_0.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\callIcon.png" />
+  </ItemGroup>
 </Project>
