--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm.iOS/Info.plist
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm.iOS/Info.plist
@@ -20,7 +20,7 @@
     <key>MinimumOSVersion</key>
     <string>10.3</string>
     <key>CFBundleDisplayName</key>
-    <string>Bileşim Acil Durum</string>
+    <string>Bileşim Acil</string>
     <key>CFBundleIdentifier</key>
     <string>com.intouch.edm</string>
     <key>CFBundleVersion</key>
