isim degisikligi yapildi.

--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm.Android/Properties/AndroidManifest.xml
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm.Android/Properties/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.intouch.edm" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="27" />
-	<application android:label="Intouch.Edm.Android" android:usesCleartextTraffic="true" android:icon="@drawable/mainIcon">
+	<application android:usesCleartextTraffic="true" android:icon="@drawable/mainIcon" android:label="Bileşim Acil">
 		<provider android:name="android.support.v4.content.FileProvider" android:authorities="${applicationId}.fileprovider" android:exported="false" android:grantUriPermissions="true">
 			<meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths"></meta-data>
 		</provider>
