--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm/Intouch.Edm.csproj
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm/Intouch.Edm.csproj
@@ -32,6 +32,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Views\AnnouncementDetailPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\AnnouncementList.xaml">
       <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
