--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm.iOS/GoogleService-Info.plist
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm.iOS/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>732909286270-16hjc0jpfog9o1lt4te03f0g9qnbf94h.apps.googleusercontent.com</string>
+	<string>732909286270-v3k28iphjsectkboi4sps4lhlpkrmtlu.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.732909286270-16hjc0jpfog9o1lt4te03f0g9qnbf94h</string>
+	<string>com.googleusercontent.apps.732909286270-v3k28iphjsectkboi4sps4lhlpkrmtlu</string>
 	<key>API_KEY</key>
 	<string>AIzaSyArulAWzMhmJ-75mDlku8Tfg2E2AXQt-tM</string>
 	<key>GCM_SENDER_ID</key>
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.intouch.edm</string>
+	<string>com.bilesim.edm</string>
 	<key>PROJECT_ID</key>
 	<string>intouch-edm</string>
 	<key>STORAGE_BUCKET</key>
@@ -29,7 +29,7 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:732909286270:ios:64e273aa7b4cf5288bf92f</string>
+	<string>1:732909286270:ios:71ad24555f42ac8e8bf92f</string>
 	<key>DATABASE_URL</key>
 	<string>https://intouch-edm.firebaseio.com</string>
 </dict>
